# Deserthawk_COMP3501_proj

./: .gitignore  desktop.ini
broken_camera/: CMakeLists.txt  Fire_gp.glsl  Fire_vp.glsl  ReadMe.txt  SS_textured_material_fp.glsl  SS_textured_material_vp.glsl  Sand-nato_gp.glsl  Sand-nato_vp.glsl  Ui.cpp  Ui.h  asteroid.cpp  asteroid.h  beacon.cpp  beacon.h  camera.cpp  camera.h  firefly_particle_fp.glsl  firefly_particle_gp.glsl  firefly_particle_vp.glsl  game.cpp  game.h  light.cpp  light.h  material_fp.glsl  model_loader.h  normal_map_fp.glsl  normal_map_vp.glsl  orb.cpp  orb.h  path_config.h  player.cpp  player.h  powerup.cpp  powerup.h  racetrack.cpp  racetrack.h  random_textured_material_fp.glsl  random_textured_material_vp.glsl  resource.h  resource_manager.cpp  (+18 more)
broken_camera 6/: CMakeLists.txt  Ui.cpp  Ui.h  asteroid.cpp  asteroid.h  beacon.cpp  camera.cpp  camera.h  enemy.cpp  enemy.h  game.cpp  game.h  main.cpp  material_vp.glsl  path_config.h  player.cpp  player.h  powerup.cpp  powerup.h  racetrack.cpp  racetrack.h  resource_manager.cpp  resource_manager.h  scene_graph.cpp  scene_graph.h  scene_node.cpp  scene_node.h  spaceship.cpp  spaceship.h
broken_camera/shaders/: cubemap_material_fp.glsl  cubemap_material_vp.glsl  glitter_particle_fp.glsl  glitter_particle_gp.glsl  glitter_particle_vp.glsl  material_vp.glsl  normal_map_fp.glsl  normal_map_vp.glsl  orb_fp.glsl  orb_vp.glsl  pond_fp.glsl  pond_vp.glsl  texture_and_normal_fp.glsl  texture_and_normal_vp.glsl
broken_camera/textures/: ReadMe.txt
